--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
   "description": "bantabaBOt",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.4.0",
     "axios": "^0.21.1",
     "canvas": "^2.7.0",
     "cheerio": "^1.0.0-rc.5",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "ffmpeg": "0.0.4",
-    "ffmpeg-static": "^4.2.7",
-    "fluent-ffmpeg": "^2.1.2",
     "image-url-validator": "^1.0.4",
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
